--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.0.0",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
     "vue": "^3.0.4",
+    "vue-clipboard3": "^2.0.0",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
